# TUC-ECE-Thesis

./: README.md
Photos/: 3dDrones-camera-pose.drawio  3dDrones-camera-pose.xml  Bounding-box.xml  HSV-procedure.drawio  Hough-Procedure.drawio  ToA.drawio  Tringulation-local.xml  Tringulation-principle.xml  aoa-2antennas.xml  pinhole-model.drawio  signal.drawio  synchronization.drawio  tdoa-dt-0.xml  tdoa-dt-not-0.xml  tdoa-timing.drawio  tdoa-timing.xml  toa-roundtrip-v2.xml  topics.drawio
Tech-spec-doc/: References.bib
Thesis/: MastersDoctoralThesis.cls  main.tex
Thesis-Proposal/: .gitignore  Chapters.tex  References.bib  Template.tex  main.tex
Thesis-gr/: .gitignore  MastersDoctoralThesis.cls  main.tex
Thesis-gr/Chapters/: Chapter1.tex  Chapter2.tex  Chapter3.tex  Chapter4.tex  Chapter6.tex  Chapter7.tex
Thesis-gr/Misc/: Abbreviations.tex  Abstract-en.tex  Abstract-gr.tex  Acknowledgments.tex  NewCommands.tex
Thesis-gr/References/: Design-Implementation.bib  Experiments-Results.bib
Thesis/Chapters/: Chapter2.tex  Chapter3.tex  Chapter4.tex  Chapter6.tex  Chapter7.tex  Template.tex
Thesis/Misc/: Abbreviations.tex  Acknowledgments.tex  NewCommands.tex
doc/: NOTES
doc/Photos/: Bounding-box.xml  High-level-top-diagram.drawio  RTK.drawio  RTK.xml  tdoa-timing.xml  (+13 more)
src/Range-Detection/: .gitignore  CMakeLists.txt  README.md  handle
src/Range-Detection/include/: CameraHandler.hpp  cameraHandler.hpp  debug.h  rangeLogic.h
src/Range-Detection/src/: CameraHandler.cpp  cameraHandler.cpp  debug.cpp  main.cpp  misc.cpp  range.cpp  rangeLogic.cpp  tmp.cpp
(+95 files in other folders)
